# wayk-cse

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  WaykNow.7z  conanfile.txt
ci/: azure-pipelines.yaml
cmake/: conan.cmake
include/cse/: bundle.h  cse_options.h  cse_utils.h  download.h  install.h  log.h
res/: resource.h.in  resource.rc.in
src/: bundle.c  cse_options.c  cse_utils.c  download.c  install.c  log.c  main.c
tests/: cse_download.c  cse_install.c  cse_options.c  env_expand.c  test_utils.h
tests/data/: options.json
wayk-cse-patcher/: Cargo.toml  build.rs
wayk-cse-patcher/mock_cse_dummy/: CMakeLists.txt  resource.h  resource.rc
wayk-cse-patcher/src/: artifacts_bundle.rs  branding.rs  bundle.rs  cse_options.rs  download.rs  error.rs  fs_util.rs  lib.rs  main.rs  patcher.rs  powershell.rs  resource_patcher.rs  signing.rs  version.rs
wayk-cse-patcher/tests/: resource_patcher.rs
wayk-cse-patcher/tests/data/: options.json  processed.json
wayk-cse-patcher/tests/data/fake_powershell_module/nested_folder/: test_file.txt
