[package]
name = "wayk-cse-patcher"
version = "0.1.0"
authors = ["Vladislav Nikonov <nikonov.vladislav@apriorit.com>"]
edition = "2018"
description = "WaykNow custom standalone executable (CSE) patcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rcedit = { path = "../rcedit" }

thiserror = "1.0"
zip = "0.5"
json = "0.12"
tempfile = "3.1"
fs_extra = "1.1.0"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
which = "4.0"