[package]
name = "wayk-cse-patcher"
version = "0.1.3"
authors = ["Vladislav Nikonov <nikonov.vladislav@apriorit.com>"]
edition = "2018"
description = "WaykNow custom standalone executable (CSE) patcher"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
rcedit = { git = "https://github.com/Devolutions/rcedit-rs", rev = "fe2a4a4" }

thiserror = "1.0"
anyhow = "1.0"
zip = "0.5"
json = "0.12"
tempfile = "3.1"
fs_extra = "1.1.0"
clap = "2.33"
log = "0.4"
env_logger = "0.7"
which = "4.0"
url = "2.1.1"
regex = "1.3.9"
widestring = "0.4.2"
winapi = "0.3.9"
version-compare = "0.0.10"
reqwest = { version = "0.10.8", features = ["blocking"] }