[package]
name = "wayk-cse-patcher"
version = "0.1.2"
authors = [ "Vladislav Nikonov <nikonov.vladislav@apriorit.com>" ]
edition = "2018"
description = "WaykNow custom standalone executable (CSE) patcher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"

[dependencies]
anyhow = "1.0"
clap = "2.33"
env_logger = "0.7"
fs_extra = "1.1.0"
json = "0.12"
lief-rs = { git = "https://github.com/Devolutions/lief-rs.git", rev = "abdd244"  }
log = "0.4"
regex = "1.3.9"
reqwest = { version = "0.10.8", features = [ "blocking" ] }
tempfile = "3.1"
thiserror = "1.0.24"
url = "2.1.1"
version-compare = "0.0.10"
which = "4.0"
zip = "0.5"

[target.'cfg(windows)'.dependencies]
winapi = "0.3.9"
widestring = "0.4.2"

[target.'cfg(unix)'.dependencies]
fs_extra = "1.2.0"